# hmpc

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  requirements.txt  vcpkg.json
.devcontainer/: Containerfile  devcontainer.json
.devcontainer/cuda/: Containerfile
cmake/: hmpc-config.cmake.in
docs/: README.md  computing.md  features.md  networking.md
docs/net/: README.md
examples/: CMakeLists.txt  bgv.cpp  fma.cpp  fma.py  ntt.cpp
hmpc/: access.hpp  assert.hpp  config.hpp  constant.hpp  constants.hpp  fmt.hpp  index.hpp  range.hpp  rational.hpp  shape.hpp  signedness.hpp  value.hpp
hmpc-rs/: .dockerignore  .gitignore  CMakeLists.txt  Cargo.toml  cbindgen.toml  rustfmt.toml
hmpc-rs/src/: ffi.rs  lib.rs  net.rs  vec.rs
hmpc-rs/src/ffi/: config.rs  errors.rs  queue.rs  span.rs
hmpc-rs/src/net/: client.rs  config.rs  consistency.rs  errors.rs  hash.rs  message_buffer.rs  metadata.rs  ptr.rs  queue.rs  server.rs  sign.rs
hmpc-rs/tests/: CMakeLists.txt  README.md  mpc.yaml  queue.rs
hmpc/comp/: accessor.hpp  device.hpp  queue.hpp  tensor.hpp  vector.hpp
hmpc/comp/crypto/lhe/: ciphertext.hpp  key.hpp  randomness.hpp
hmpc/comp/mpc/: share.hpp
hmpc/core/: add.hpp  bit_and.hpp  bit_array.hpp  bit_not.hpp  bit_or.hpp  bit_span.hpp  bit_span_metadata.hpp  bit_width.hpp  bit_xor.hpp  cast.hpp  combined_shift_left.hpp  combined_shift_right.hpp  compiletime_bit_array.hpp  compiletime_bit_span.hpp  constant_bit_span.hpp  converting_limb_span.hpp  countr_zero.hpp  divide.hpp  equal_to.hpp  extend_sign.hpp  extract_bit.hpp  greater.hpp  greater_equal.hpp  has_single_bit.hpp  is_normal.hpp  is_set.hpp  lcm.hpp  less.hpp  less_equal.hpp  limb_array.hpp  limb_size.hpp  limb_span.hpp  limb_traits.hpp  mask_inside.hpp  mask_outside.hpp  masked_bit_span.hpp  max.hpp  mdsize.hpp  min.hpp  multiply.hpp  (+10 more)
hmpc/core/num/: add.hpp  bit_and.hpp  bit_copy.hpp  bit_not.hpp  bit_or.hpp  bit_width.hpp  bit_xor.hpp  compare.hpp  convert.hpp  countr_zero.hpp  divide.hpp  extract_bit.hpp  greatest_common_divisor.hpp  has_single_bit.hpp  is_normal.hpp  modulo.hpp  multiply.hpp  negate.hpp  select.hpp  set_bit.hpp  shift_left.hpp  shift_right.hpp  subtract.hpp
hmpc/crypto/: chacha.hpp  cipher.hpp
hmpc/detail/: constant_list.hpp  hash.hpp  random.hpp  tuple.hpp  type_id.hpp  type_list.hpp  type_map.hpp  type_map_element.hpp  type_set.hpp  type_tag.hpp  unique_tag.hpp  utility.hpp
hmpc/expr/: abs.hpp  binary_expression.hpp  bit_monomial.hpp  cache.hpp  cast.hpp  constant.hpp  expression.hpp  matrix_product.hpp  matrix_vector_product.hpp  number_theoretic_transform.hpp  reduce.hpp  tensor.hpp  unsqueeze.hpp  value.hpp  vector.hpp
hmpc/expr/crypto/: cipher.hpp
hmpc/expr/crypto/lhe/: ciphertext.hpp  dec.hpp  enc.hpp  key.hpp  randomness.hpp
hmpc/expr/mpc/: share.hpp
hmpc/expr/random/: binomial.hpp  binomial_from_number_generator.hpp  number_generator.hpp  uniform.hpp  uniform_from_number_generator.hpp
hmpc/ints/: bigint.hpp  bit_monomial.hpp  integer_traits.hpp  literals.hpp  mod.hpp  numeric.hpp  poly.hpp  poly_mod.hpp  uint.hpp
hmpc/ints/num/: add.hpp  bit_and.hpp  bit_copy.hpp  bit_not.hpp  bit_or.hpp  bit_width.hpp  bit_xor.hpp  compare.hpp  countr_zero.hpp  divide.hpp  extract_bit.hpp  greatest_common_divisor.hpp  has_single_bit.hpp  is_normal.hpp  modulo.hpp  multiply.hpp  negate.hpp  select.hpp  shift_left.hpp  shift_right.hpp  subtract.hpp
hmpc/ints/num/theory/: root_of_unity.hpp
hmpc/iter/: at_structure.hpp  collect_structure.hpp  enumerate_structure.hpp  for_each_range.hpp  for_each_reverse_range.hpp  for_packed_range.hpp  for_range.hpp  for_reverse_range.hpp  next.hpp  prev.hpp  scan_range.hpp  scan_reverse_range.hpp  stride.hpp  unpack_range.hpp
hmpc/net/: communicator.hpp  config.hpp  ffi.hpp  queue.hpp  structure.hpp
hmpc/random/: binomial.hpp  number_generator.hpp  uniform.hpp
hmpc/typing/: reference.hpp  structure.hpp
tests/: CMakeLists.txt  README.md  catch_helpers.hpp  index.cpp  range.cpp  shape.cpp  signedness.cpp
tests/comp/: queue.cpp
tests/core/: mdsize.cpp  uint.cpp
tests/crypto/: chacha.cpp  cipher.cpp
tests/detail/: type_id.cpp  type_map.cpp  type_set.cpp  utility.cpp
tests/expr/: bit_monomial.cpp  cache.cpp  matrix_product.cpp  matrix_vector_product.cpp  reduce.cpp
tests/expr/crypto/: cipher.cpp
tests/expr/crypto/lhe/: enc.cpp
tests/expr/random/: number_generator.cpp
tests/ints/: bigint.cpp  literals.cpp  mod.cpp  poly.cpp  poly_mod.cpp  uint.cpp
tests/ints/num/theory/: root_of_unity.cpp
tests/net/: ffi.cpp  queue.cpp
tests/random/: binomial.cpp  uniform.cpp
tests/typing/: reference.cpp  structure.cpp
