[package]
name = "hmpc-rs"
version = "0.4.0"
edition = "2021"
publish = false

[lib]
name = "hmpc_rs"
crate-type = ["staticlib", "lib"]

[profile.CMake-Release]
inherits = "release"
debug = false
strip = "debuginfo"

[profile.CMake-Debug]
inherits = "dev"
debug = true

[profile.CMake-RelWithDebInfo]
inherits = "release"
debug = true
strip = "none"

[profile.CMake-MinSizeRel]
inherits = "release"
debug = false
strip = "debuginfo"
opt-level = "s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
config = "0.14.0"
env_logger = "0.11.3"
itertools = "0.12.1"
log = { version = "0.4.21", features = ["std"] }
rcgen = "0.12.1"
ring = { version = "0.17.8", features = ["std"] }
rustls = "0.21.11"
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
quinn = "0.10.2"

[features]
default = []
signing = []
statistics = []

[lints.rust]
# fuzzy-provenance-casts = "deny"
# lossy-provenance-casts = "deny"
missing-abi = "deny"
# must-not-suspend = "deny"
missing-debug-implementations = "warn"
let-underscore-drop = "warn"
unstable-features = "warn"
unused-crate-dependencies = "warn"

[lints.clippy]
correctness = "deny"
complexity = "warn"
suspicious = "warn"
perf = "warn"
pedantic = "warn"
cargo = "warn"
