[package]
name = "hmpc-rs"
version = "0.5.0"
edition = "2021"
publish = false

[lib]
name = "hmpc_rs"
crate-type = ["staticlib", "lib"]

[profile.CMake-Release]
inherits = "release"
debug = false
strip = "debuginfo"

[profile.CMake-Debug]
inherits = "dev"
debug = true

[profile.CMake-RelWithDebInfo]
inherits = "release"
debug = true
strip = "none"

[profile.CMake-MinSizeRel]
inherits = "release"
debug = false
strip = "debuginfo"
opt-level = "s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
config = "0.15.6"
env_logger = "0.11.6"
itertools = "0.14.0"
log = { version = "0.4.25", features = ["std"] }
rcgen = "0.13.2"
ring = { version = "0.17.8", features = ["std"] }
rustls = { version = "0.23.21", default-features = false, features = ["logging", "ring"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
quinn = "0.11.6"

[features]
default = []
sessions = []
signing = []
collective-consistency = ["signing"]
statistics = []

[lints.rust]
# fuzzy-provenance-casts = "deny"
# lossy-provenance-casts = "deny"
missing-abi = "deny"
# must-not-suspend = "deny"
missing-debug-implementations = "warn"
let-underscore-drop = "warn"
unstable-features = "warn"
unused-crate-dependencies = "warn"

[lints.clippy]
correctness = "deny"
complexity = "warn"
suspicious = "warn"
perf = "warn"
pedantic = "warn"
cargo = "warn"
